--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -35,6 +35,8 @@
     </div>
 {{/products}}
 
+<a href="/stats">Statistics</a>
+
 <div>
     <form action="/logout" method="post">
         <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
